--- a/notebooks/food_diary_analysis.ipynb
+++ b/notebooks/food_diary_analysis.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 201,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -16,7 +25,12 @@
     "import seaborn as sns\n",
     "import matplotlib as mpl\n",
     "import matplotlib.pyplot as plt\n",
-    "%matplotlib inline"
+    "%matplotlib inline\n",
+    "\n",
+    "import sys\n",
+    "sys.path.append('/home/matthew/food-diary-analysis/lib')\n",
+    "from pipeline_components import pipeline_components as pc\n",
+    "from pipelines import pipelines as pipes\n"
    ]
   },
   {
@@ -28,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +92,7 @@
        "0           3  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 202,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -95,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +122,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 203,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +146,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 204,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,51 +164,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 252,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "prelim_food_diary = raw_food_diary.copy()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 253,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "pipeline = pipes.GenericPipeline(\n",
+    "    prelim_food_diary,\n",
+    "    [\n",
+    "        (\n",
+    "            pc.ConvertDateAndTimeToDatetime, \n",
+    "            {\"columns_to_drop\": ['date', 'time']}\n",
+    "        )\n",
+    "    ]\n",
+    ")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 254,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting to run pipeline...\n",
+      "Finished running pipeline...\n"
+     ]
+    }
+   ],
+   "source": [
+    "prelim_food_diary = pipeline.run()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 255,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>meal_ingredients</th>\n",
+       "      <th>discomfort</th>\n",
+       "      <th>datetime</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>wheat, sugar, onion, garlic, chicken, peas, co...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2021-04-18 17:30:00-04:00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                    meal_ingredients  discomfort  \\\n",
+       "0  wheat, sugar, onion, garlic, chicken, peas, co...           3   \n",
+       "\n",
+       "                   datetime  \n",
+       "0 2021-04-18 17:30:00-04:00  "
+      ]
+     },
+     "execution_count": 255,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prelim_food_diary"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Raw data visualizations"
+    "## Preliminary data visualizations"
    ]
   },
   {
@@ -208,10 +285,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 256,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "meal_ingredients                        object\n",
+       "discomfort                               int64\n",
+       "datetime            datetime64[ns, US/Eastern]\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 256,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prelim_food_diary.dtypes"
+   ]
   },
   {
    "cell_type": "code",
