--- a/notebooks/food_diary_analysis.ipynb
+++ b/notebooks/food_diary_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -27,8 +27,9 @@
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
     "\n",
-    "import sys\n",
-    "sys.path.append('/home/matthew/food-diary-analysis/lib')\n",
+    "import sys, os\n",
+    "home_directory = '/home/matthew'\n",
+    "sys.path.append(home_directory+'food-diary-analysis/lib')\n",
     "from pipeline_components import pipeline_components as pc\n",
     "from pipelines import pipelines as pipes\n"
    ]
@@ -42,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +93,7 @@
        "0           3  "
       ]
      },
-     "execution_count": 202,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +123,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 203,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +147,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 204,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
