fix import path in notebook

--- a/notebooks/food_diary_analysis.ipynb
+++ b/notebooks/food_diary_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +29,7 @@
     "\n",
     "import sys, os\n",
     "home_directory = '/home/matthew'\n",
-    "sys.path.append(home_directory+'food-diary-analysis/lib')\n",
+    "sys.path.append(home_directory+'/food-diary-analysis/lib')\n",
     "from pipeline_components import pipeline_components as pc\n",
     "from pipelines import pipelines as pipes\n"
    ]
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
