--- a/notebooks/food_diary_analysis.ipynb
+++ b/notebooks/food_diary_analysis.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -44,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +103,7 @@
        "2           4  "
       ]
      },
-     "execution_count": 75,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +133,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +157,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -234,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +289,7 @@
        "2 2021-04-21 17:35:00-04:00  "
       ]
      },
-     "execution_count": 81,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,16 +307,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fd7bd7fb048>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f0545f333c8>"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -365,10 +356,189 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>meal_ingredients</th>\n",
+       "      <th>discomfort</th>\n",
+       "      <th>datetime</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>wheat, sugar, onion, garlic, chicken, peas, co...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2021-04-18 17:30:00-04:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>rice, sugar, garlic, roast, peas, carrot</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2021-04-20 11:35:00-04:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>rice, sugar, garlic, roast, peas, carrot</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2021-04-21 17:35:00-04:00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                    meal_ingredients  discomfort  \\\n",
+       "0  wheat, sugar, onion, garlic, chicken, peas, co...           3   \n",
+       "1           rice, sugar, garlic, roast, peas, carrot           4   \n",
+       "2           rice, sugar, garlic, roast, peas, carrot           4   \n",
+       "\n",
+       "                   datetime  \n",
+       "0 2021-04-18 17:30:00-04:00  \n",
+       "1 2021-04-20 11:35:00-04:00  \n",
+       "2 2021-04-21 17:35:00-04:00  "
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_food_diary = prelim_food_diary.copy()\n",
+    "final_food_diary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "pipeline = pipes.GenericPipeline(\n",
+    "    prelim_food_diary,\n",
+    "    [\n",
+    "        (\n",
+    "            pc.ConvertStringColumnToListOfStrings,\n",
+    "            {\"column_to_convert\": \"meal_ingredients\"}\n",
+    "        )\n",
+    "    ]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting to run pipeline...\n",
+      "Finished running pipeline...\n"
+     ]
+    }
+   ],
+   "source": [
+    "final_food_diary = pipeline.run()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>meal_ingredients</th>\n",
+       "      <th>discomfort</th>\n",
+       "      <th>datetime</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>[wheat, sugar, onion, garlic, chicken, peas, c...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2021-04-18 17:30:00-04:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>[rice, sugar, garlic, roast, peas, carrot]</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2021-04-20 11:35:00-04:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>[rice, sugar, garlic, roast, peas, carrot]</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2021-04-21 17:35:00-04:00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                    meal_ingredients  discomfort  \\\n",
+       "0  [wheat, sugar, onion, garlic, chicken, peas, c...           3   \n",
+       "1         [rice, sugar, garlic, roast, peas, carrot]           4   \n",
+       "2         [rice, sugar, garlic, roast, peas, carrot]           4   \n",
+       "\n",
+       "                   datetime  \n",
+       "0 2021-04-18 17:30:00-04:00  \n",
+       "1 2021-04-20 11:35:00-04:00  \n",
+       "2 2021-04-21 17:35:00-04:00  "
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_food_diary"
+   ]
   },
   {
    "cell_type": "code",
@@ -397,6 +567,218 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>meal_ingredients</th>\n",
+       "      <th>discomfort</th>\n",
+       "      <th>datetime</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>wheat</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2021-04-18 17:30:00-04:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>sugar</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2021-04-18 17:30:00-04:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>onion</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2021-04-18 17:30:00-04:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>garlic</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2021-04-18 17:30:00-04:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>chicken</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2021-04-18 17:30:00-04:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>peas</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2021-04-18 17:30:00-04:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>corn syrup</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2021-04-18 17:30:00-04:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>lemon</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2021-04-18 17:30:00-04:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>rice</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2021-04-20 11:35:00-04:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>sugar</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2021-04-20 11:35:00-04:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>garlic</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2021-04-20 11:35:00-04:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>roast</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2021-04-20 11:35:00-04:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>peas</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2021-04-20 11:35:00-04:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>carrot</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2021-04-20 11:35:00-04:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>rice</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2021-04-21 17:35:00-04:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>sugar</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2021-04-21 17:35:00-04:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>garlic</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2021-04-21 17:35:00-04:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>roast</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2021-04-21 17:35:00-04:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>peas</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2021-04-21 17:35:00-04:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>carrot</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2021-04-21 17:35:00-04:00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  meal_ingredients  discomfort                  datetime\n",
+       "0            wheat           3 2021-04-18 17:30:00-04:00\n",
+       "0            sugar           3 2021-04-18 17:30:00-04:00\n",
+       "0            onion           3 2021-04-18 17:30:00-04:00\n",
+       "0           garlic           3 2021-04-18 17:30:00-04:00\n",
+       "0          chicken           3 2021-04-18 17:30:00-04:00\n",
+       "0             peas           3 2021-04-18 17:30:00-04:00\n",
+       "0       corn syrup           3 2021-04-18 17:30:00-04:00\n",
+       "0            lemon           3 2021-04-18 17:30:00-04:00\n",
+       "1             rice           4 2021-04-20 11:35:00-04:00\n",
+       "1            sugar           4 2021-04-20 11:35:00-04:00\n",
+       "1           garlic           4 2021-04-20 11:35:00-04:00\n",
+       "1            roast           4 2021-04-20 11:35:00-04:00\n",
+       "1             peas           4 2021-04-20 11:35:00-04:00\n",
+       "1           carrot           4 2021-04-20 11:35:00-04:00\n",
+       "2             rice           4 2021-04-21 17:35:00-04:00\n",
+       "2            sugar           4 2021-04-21 17:35:00-04:00\n",
+       "2           garlic           4 2021-04-21 17:35:00-04:00\n",
+       "2            roast           4 2021-04-21 17:35:00-04:00\n",
+       "2             peas           4 2021-04-21 17:35:00-04:00\n",
+       "2           carrot           4 2021-04-21 17:35:00-04:00"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_food_diary.explode('meal_ingredients')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pipeline = pipes.GenericPipeline(\n",
+    "    prelim_food_diary,\n",
+    "    [\n",
+    "        (\n",
+    "            \n",
+    "        )\n",
+    "    ]\n",
+    ")"
+   ]
   },
   {
    "cell_type": "code",
