explode column component

--- a/notebooks/food_diary_analysis.ipynb
+++ b/notebooks/food_diary_analysis.ipynb
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -381,46 +381,50 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>meal_ingredients</th>\n",
+       "      <th>date</th>\n",
+       "      <th>time</th>\n",
        "      <th>discomfort</th>\n",
-       "      <th>datetime</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>wheat, sugar, onion, garlic, chicken, peas, co...</td>\n",
+       "      <td>April 18 2021</td>\n",
+       "      <td>5:30 PM</td>\n",
        "      <td>3</td>\n",
-       "      <td>2021-04-18 17:30:00-04:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>rice, sugar, garlic, roast, peas, carrot</td>\n",
+       "      <td>April 20 2021</td>\n",
+       "      <td>11:35 AM</td>\n",
        "      <td>4</td>\n",
-       "      <td>2021-04-20 11:35:00-04:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>rice, sugar, garlic, roast, peas, carrot</td>\n",
+       "      <td>April 21 2021</td>\n",
+       "      <td>5:35 PM</td>\n",
        "      <td>4</td>\n",
-       "      <td>2021-04-21 17:35:00-04:00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                    meal_ingredients  discomfort  \\\n",
-       "0  wheat, sugar, onion, garlic, chicken, peas, co...           3   \n",
-       "1           rice, sugar, garlic, roast, peas, carrot           4   \n",
-       "2           rice, sugar, garlic, roast, peas, carrot           4   \n",
+       "                                    meal_ingredients           date      time  \\\n",
+       "0  wheat, sugar, onion, garlic, chicken, peas, co...  April 18 2021   5:30 PM   \n",
+       "1           rice, sugar, garlic, roast, peas, carrot  April 20 2021  11:35 AM   \n",
+       "2           rice, sugar, garlic, roast, peas, carrot  April 21 2021   5:35 PM   \n",
        "\n",
-       "                   datetime  \n",
-       "0 2021-04-18 17:30:00-04:00  \n",
-       "1 2021-04-20 11:35:00-04:00  \n",
-       "2 2021-04-21 17:35:00-04:00  "
+       "   discomfort  \n",
+       "0           3  \n",
+       "1           4  \n",
+       "2           4  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -432,16 +436,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
     "pipeline = pipes.GenericPipeline(\n",
-    "    prelim_food_diary,\n",
+    "    final_food_diary,\n",
     "    [\n",
     "        (\n",
     "            pc.ConvertStringColumnToListOfStrings,\n",
     "            {\"column_to_convert\": \"meal_ingredients\"}\n",
+    "        ),\n",
+    "        (\n",
+    "            pc.ExplodeColumn,\n",
+    "            {\"column_to_explode\": \"meal_ingredients\"}\n",
     "        )\n",
     "    ]\n",
     ")"
@@ -449,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -492,46 +500,181 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>meal_ingredients</th>\n",
+       "      <th>date</th>\n",
+       "      <th>time</th>\n",
        "      <th>discomfort</th>\n",
-       "      <th>datetime</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>[wheat, sugar, onion, garlic, chicken, peas, c...</td>\n",
+       "      <td>wheat</td>\n",
+       "      <td>April 18 2021</td>\n",
+       "      <td>5:30 PM</td>\n",
        "      <td>3</td>\n",
-       "      <td>2021-04-18 17:30:00-04:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>[rice, sugar, garlic, roast, peas, carrot]</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2021-04-20 11:35:00-04:00</td>\n",
+       "      <td>sugar</td>\n",
+       "      <td>April 18 2021</td>\n",
+       "      <td>5:30 PM</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>[rice, sugar, garlic, roast, peas, carrot]</td>\n",
+       "      <td>onion</td>\n",
+       "      <td>April 18 2021</td>\n",
+       "      <td>5:30 PM</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>garlic</td>\n",
+       "      <td>April 18 2021</td>\n",
+       "      <td>5:30 PM</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>chicken</td>\n",
+       "      <td>April 18 2021</td>\n",
+       "      <td>5:30 PM</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>peas</td>\n",
+       "      <td>April 18 2021</td>\n",
+       "      <td>5:30 PM</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>corn syrup</td>\n",
+       "      <td>April 18 2021</td>\n",
+       "      <td>5:30 PM</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>lemon</td>\n",
+       "      <td>April 18 2021</td>\n",
+       "      <td>5:30 PM</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>rice</td>\n",
+       "      <td>April 20 2021</td>\n",
+       "      <td>11:35 AM</td>\n",
        "      <td>4</td>\n",
-       "      <td>2021-04-21 17:35:00-04:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>sugar</td>\n",
+       "      <td>April 20 2021</td>\n",
+       "      <td>11:35 AM</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>garlic</td>\n",
+       "      <td>April 20 2021</td>\n",
+       "      <td>11:35 AM</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>roast</td>\n",
+       "      <td>April 20 2021</td>\n",
+       "      <td>11:35 AM</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>peas</td>\n",
+       "      <td>April 20 2021</td>\n",
+       "      <td>11:35 AM</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>carrot</td>\n",
+       "      <td>April 20 2021</td>\n",
+       "      <td>11:35 AM</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>rice</td>\n",
+       "      <td>April 21 2021</td>\n",
+       "      <td>5:35 PM</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>sugar</td>\n",
+       "      <td>April 21 2021</td>\n",
+       "      <td>5:35 PM</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>garlic</td>\n",
+       "      <td>April 21 2021</td>\n",
+       "      <td>5:35 PM</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>roast</td>\n",
+       "      <td>April 21 2021</td>\n",
+       "      <td>5:35 PM</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>peas</td>\n",
+       "      <td>April 21 2021</td>\n",
+       "      <td>5:35 PM</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>carrot</td>\n",
+       "      <td>April 21 2021</td>\n",
+       "      <td>5:35 PM</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                    meal_ingredients  discomfort  \\\n",
-       "0  [wheat, sugar, onion, garlic, chicken, peas, c...           3   \n",
-       "1         [rice, sugar, garlic, roast, peas, carrot]           4   \n",
-       "2         [rice, sugar, garlic, roast, peas, carrot]           4   \n",
-       "\n",
-       "                   datetime  \n",
-       "0 2021-04-18 17:30:00-04:00  \n",
-       "1 2021-04-20 11:35:00-04:00  \n",
-       "2 2021-04-21 17:35:00-04:00  "
+       "   meal_ingredients           date      time  discomfort\n",
+       "0             wheat  April 18 2021   5:30 PM           3\n",
+       "1             sugar  April 18 2021   5:30 PM           3\n",
+       "2             onion  April 18 2021   5:30 PM           3\n",
+       "3            garlic  April 18 2021   5:30 PM           3\n",
+       "4           chicken  April 18 2021   5:30 PM           3\n",
+       "5              peas  April 18 2021   5:30 PM           3\n",
+       "6        corn syrup  April 18 2021   5:30 PM           3\n",
+       "7             lemon  April 18 2021   5:30 PM           3\n",
+       "8              rice  April 20 2021  11:35 AM           4\n",
+       "9             sugar  April 20 2021  11:35 AM           4\n",
+       "10           garlic  April 20 2021  11:35 AM           4\n",
+       "11            roast  April 20 2021  11:35 AM           4\n",
+       "12             peas  April 20 2021  11:35 AM           4\n",
+       "13           carrot  April 20 2021  11:35 AM           4\n",
+       "14             rice  April 21 2021   5:35 PM           4\n",
+       "15            sugar  April 21 2021   5:35 PM           4\n",
+       "16           garlic  April 21 2021   5:35 PM           4\n",
+       "17            roast  April 21 2021   5:35 PM           4\n",
+       "18             peas  April 21 2021   5:35 PM           4\n",
+       "19           carrot  April 21 2021   5:35 PM           4"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -545,216 +688,8 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>meal_ingredients</th>\n",
-       "      <th>discomfort</th>\n",
-       "      <th>datetime</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>wheat</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2021-04-18 17:30:00-04:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>sugar</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2021-04-18 17:30:00-04:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>onion</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2021-04-18 17:30:00-04:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>garlic</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2021-04-18 17:30:00-04:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>chicken</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2021-04-18 17:30:00-04:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>peas</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2021-04-18 17:30:00-04:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>corn syrup</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2021-04-18 17:30:00-04:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>lemon</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2021-04-18 17:30:00-04:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>rice</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2021-04-20 11:35:00-04:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>sugar</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2021-04-20 11:35:00-04:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>garlic</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2021-04-20 11:35:00-04:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>roast</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2021-04-20 11:35:00-04:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>peas</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2021-04-20 11:35:00-04:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>carrot</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2021-04-20 11:35:00-04:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>rice</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2021-04-21 17:35:00-04:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>sugar</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2021-04-21 17:35:00-04:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>garlic</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2021-04-21 17:35:00-04:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>roast</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2021-04-21 17:35:00-04:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>peas</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2021-04-21 17:35:00-04:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>carrot</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2021-04-21 17:35:00-04:00</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  meal_ingredients  discomfort                  datetime\n",
-       "0            wheat           3 2021-04-18 17:30:00-04:00\n",
-       "0            sugar           3 2021-04-18 17:30:00-04:00\n",
-       "0            onion           3 2021-04-18 17:30:00-04:00\n",
-       "0           garlic           3 2021-04-18 17:30:00-04:00\n",
-       "0          chicken           3 2021-04-18 17:30:00-04:00\n",
-       "0             peas           3 2021-04-18 17:30:00-04:00\n",
-       "0       corn syrup           3 2021-04-18 17:30:00-04:00\n",
-       "0            lemon           3 2021-04-18 17:30:00-04:00\n",
-       "1             rice           4 2021-04-20 11:35:00-04:00\n",
-       "1            sugar           4 2021-04-20 11:35:00-04:00\n",
-       "1           garlic           4 2021-04-20 11:35:00-04:00\n",
-       "1            roast           4 2021-04-20 11:35:00-04:00\n",
-       "1             peas           4 2021-04-20 11:35:00-04:00\n",
-       "1           carrot           4 2021-04-20 11:35:00-04:00\n",
-       "2             rice           4 2021-04-21 17:35:00-04:00\n",
-       "2            sugar           4 2021-04-21 17:35:00-04:00\n",
-       "2           garlic           4 2021-04-21 17:35:00-04:00\n",
-       "2            roast           4 2021-04-21 17:35:00-04:00\n",
-       "2             peas           4 2021-04-21 17:35:00-04:00\n",
-       "2           carrot           4 2021-04-21 17:35:00-04:00"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "final_food_diary.explode('meal_ingredients')"
+    "# TODO aggregation on discomfort! "
    ]
   },
   {
@@ -769,16 +704,35 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "pipeline = pipes.GenericPipeline(\n",
-    "    prelim_food_diary,\n",
-    "    [\n",
-    "        (\n",
-    "            \n",
-    "        )\n",
-    "    ]\n",
-    ")"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
