--- a/notebooks/food_diary_analysis.ipynb
+++ b/notebooks/food_diary_analysis.ipynb
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -420,7 +420,7 @@
        "2 2021-04-21 17:35:00-04:00  "
       ]
      },
-     "execution_count": 88,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,6 +450,13 @@
     "        (\n",
     "            pc.RenameColumns,\n",
     "            {\"rename_map\": {\"meal_ingredients\": \"ingredient\"}}\n",
+    "        ),\n",
+    "        (\n",
+    "            pc.CalculateMeanAndStdDevOfColumn,\n",
+    "            {\n",
+    "                \"columns_to_groupby\": [\"ingredient\"],\n",
+    "                \"column_to_aggregate\": \"discomfort\"\n",
+    "            }\n",
     "        )\n",
     "    ]\n",
     ")"
@@ -457,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -475,244 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>ingredient</th>\n",
-       "      <th>discomfort</th>\n",
-       "      <th>datetime</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>wheat</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2021-04-18 17:30:00-04:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>sugar</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2021-04-18 17:30:00-04:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>onion</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2021-04-18 17:30:00-04:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>garlic</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2021-04-18 17:30:00-04:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>chicken</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2021-04-18 17:30:00-04:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>peas</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2021-04-18 17:30:00-04:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>corn syrup</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2021-04-18 17:30:00-04:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>lemon</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2021-04-18 17:30:00-04:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>rice</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2021-04-20 11:35:00-04:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>sugar</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2021-04-20 11:35:00-04:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>garlic</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2021-04-20 11:35:00-04:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>roast</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2021-04-20 11:35:00-04:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>peas</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2021-04-20 11:35:00-04:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>carrot</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2021-04-20 11:35:00-04:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>rice</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2021-04-21 17:35:00-04:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>sugar</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2021-04-21 17:35:00-04:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>garlic</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2021-04-21 17:35:00-04:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>roast</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2021-04-21 17:35:00-04:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>peas</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2021-04-21 17:35:00-04:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>carrot</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2021-04-21 17:35:00-04:00</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    ingredient  discomfort                  datetime\n",
-       "0        wheat           3 2021-04-18 17:30:00-04:00\n",
-       "1        sugar           3 2021-04-18 17:30:00-04:00\n",
-       "2        onion           3 2021-04-18 17:30:00-04:00\n",
-       "3       garlic           3 2021-04-18 17:30:00-04:00\n",
-       "4      chicken           3 2021-04-18 17:30:00-04:00\n",
-       "5         peas           3 2021-04-18 17:30:00-04:00\n",
-       "6   corn syrup           3 2021-04-18 17:30:00-04:00\n",
-       "7        lemon           3 2021-04-18 17:30:00-04:00\n",
-       "8         rice           4 2021-04-20 11:35:00-04:00\n",
-       "9        sugar           4 2021-04-20 11:35:00-04:00\n",
-       "10      garlic           4 2021-04-20 11:35:00-04:00\n",
-       "11       roast           4 2021-04-20 11:35:00-04:00\n",
-       "12        peas           4 2021-04-20 11:35:00-04:00\n",
-       "13      carrot           4 2021-04-20 11:35:00-04:00\n",
-       "14        rice           4 2021-04-21 17:35:00-04:00\n",
-       "15       sugar           4 2021-04-21 17:35:00-04:00\n",
-       "16      garlic           4 2021-04-21 17:35:00-04:00\n",
-       "17       roast           4 2021-04-21 17:35:00-04:00\n",
-       "18        peas           4 2021-04-21 17:35:00-04:00\n",
-       "19      carrot           4 2021-04-21 17:35:00-04:00"
-      ]
-     },
-     "execution_count": 91,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "final_food_diary"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 92,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# massages_day_of_the_week_aggs = (\n",
-    "#     massages_day_of_the_week_per_week\n",
-    "#     .agg(\n",
-    "#         [\n",
-    "#             'mean',\n",
-    "#             'std',\n",
-    "#             q50,\n",
-    "#             q25,\n",
-    "#             q75\n",
-    "#         ],\n",
-    "#         axis = 1\n",
-    "#     )\n",
-    "#     .reset_index()\n",
-    "#     .rename(columns={'index': 'Day of Week'})\n",
-    "# )\n",
-    "\n",
-    "final_food_diary = (\n",
-    "    final_food_diary\n",
-    "    .groupby(['ingredient'])\n",
-    "    .agg(\n",
-    "        {\n",
-    "            'discomfort': ['mean', 'std']\n",
-    "        }\n",
-    "    )\n",
-    "    .reset_index()\n",
-    ")\n",
-    "\n",
-    "final_food_diary.columns = (\n",
-    "    final_food_diary\n",
-    "    .columns.map('_'.join)\n",
-    ")\n",
-    "\n",
-    "final_food_diary = (\n",
-    "    final_food_diary\n",
-    "    .rename(\n",
-    "        columns={\n",
-    "            'ingredient_': 'ingredient'\n",
-    "        }\n",
-    "    )\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -739,6 +509,7 @@
        "      <th>ingredient</th>\n",
        "      <th>discomfort_mean</th>\n",
        "      <th>discomfort_std</th>\n",
+       "      <th>discomfort_count</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -747,87 +518,98 @@
        "      <td>carrot</td>\n",
        "      <td>4.000000</td>\n",
        "      <td>0.00000</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>chicken</td>\n",
        "      <td>3.000000</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>corn syrup</td>\n",
        "      <td>3.000000</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>garlic</td>\n",
        "      <td>3.666667</td>\n",
        "      <td>0.57735</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>lemon</td>\n",
        "      <td>3.000000</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>onion</td>\n",
        "      <td>3.000000</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>peas</td>\n",
        "      <td>3.666667</td>\n",
        "      <td>0.57735</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>rice</td>\n",
        "      <td>4.000000</td>\n",
        "      <td>0.00000</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>roast</td>\n",
        "      <td>4.000000</td>\n",
        "      <td>0.00000</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>sugar</td>\n",
        "      <td>3.666667</td>\n",
        "      <td>0.57735</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
        "      <td>wheat</td>\n",
        "      <td>3.000000</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    ingredient  discomfort_mean  discomfort_std\n",
-       "0       carrot         4.000000         0.00000\n",
-       "1      chicken         3.000000             NaN\n",
-       "2   corn syrup         3.000000             NaN\n",
-       "3       garlic         3.666667         0.57735\n",
-       "4        lemon         3.000000             NaN\n",
-       "5        onion         3.000000             NaN\n",
-       "6         peas         3.666667         0.57735\n",
-       "7         rice         4.000000         0.00000\n",
-       "8        roast         4.000000         0.00000\n",
-       "9        sugar         3.666667         0.57735\n",
-       "10       wheat         3.000000             NaN"
+       "    ingredient  discomfort_mean  discomfort_std  discomfort_count\n",
+       "0       carrot         4.000000         0.00000                 2\n",
+       "1      chicken         3.000000             NaN                 1\n",
+       "2   corn syrup         3.000000             NaN                 1\n",
+       "3       garlic         3.666667         0.57735                 3\n",
+       "4        lemon         3.000000             NaN                 1\n",
+       "5        onion         3.000000             NaN                 1\n",
+       "6         peas         3.666667         0.57735                 3\n",
+       "7         rice         4.000000         0.00000                 2\n",
+       "8        roast         4.000000         0.00000                 2\n",
+       "9        sugar         3.666667         0.57735                 3\n",
+       "10       wheat         3.000000             NaN                 1"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -838,23 +620,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['meal_ingredients', 'discomfort_mean', 'discomfort_std'], dtype='object')"
-      ]
-     },
-     "execution_count": 86,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "final_food_diary.columns"
+    "\n",
+    "# TODO orderby component"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
