add sort by columns component and tests

--- a/notebooks/food_diary_analysis.ipynb
+++ b/notebooks/food_diary_analysis.ipynb
@@ -313,7 +313,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f10fbbdb390>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7fe989ba9b00>"
       ]
      },
      "execution_count": 9,
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -420,7 +420,7 @@
        "2 2021-04-21 17:35:00-04:00  "
       ]
      },
-     "execution_count": 120,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -457,6 +457,13 @@
     "                \"columns_to_groupby\": [\"ingredient\"],\n",
     "                \"column_to_aggregate\": \"discomfort\"\n",
     "            }\n",
+    "        ),\n",
+    "        (\n",
+    "            pc.SortByColumns,\n",
+    "            {\n",
+    "                \"columns_to_sort_by\": ['discomfort_mean'],\n",
+    "                \"ascending_flags\": [False]\n",
+    "            }\n",
     "        )\n",
     "    ]\n",
     ")"
@@ -464,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -522,17 +529,17 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>chicken</td>\n",
-       "      <td>3.000000</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
+       "      <td>rice</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>corn syrup</td>\n",
-       "      <td>3.000000</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
+       "      <td>roast</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -543,45 +550,45 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>lemon</td>\n",
-       "      <td>3.000000</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>onion</td>\n",
-       "      <td>3.000000</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
        "      <td>peas</td>\n",
        "      <td>3.666667</td>\n",
        "      <td>0.57735</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>rice</td>\n",
-       "      <td>4.000000</td>\n",
-       "      <td>0.00000</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>roast</td>\n",
-       "      <td>4.000000</td>\n",
-       "      <td>0.00000</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
+       "      <th>5</th>\n",
        "      <td>sugar</td>\n",
        "      <td>3.666667</td>\n",
        "      <td>0.57735</td>\n",
        "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>chicken</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>corn syrup</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>lemon</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>onion</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
@@ -597,19 +604,19 @@
       "text/plain": [
        "    ingredient  discomfort_mean  discomfort_std  discomfort_count\n",
        "0       carrot         4.000000         0.00000                 2\n",
-       "1      chicken         3.000000             NaN                 1\n",
-       "2   corn syrup         3.000000             NaN                 1\n",
+       "1         rice         4.000000         0.00000                 2\n",
+       "2        roast         4.000000         0.00000                 2\n",
        "3       garlic         3.666667         0.57735                 3\n",
-       "4        lemon         3.000000             NaN                 1\n",
-       "5        onion         3.000000             NaN                 1\n",
-       "6         peas         3.666667         0.57735                 3\n",
-       "7         rice         4.000000         0.00000                 2\n",
-       "8        roast         4.000000         0.00000                 2\n",
-       "9        sugar         3.666667         0.57735                 3\n",
+       "4         peas         3.666667         0.57735                 3\n",
+       "5        sugar         3.666667         0.57735                 3\n",
+       "6      chicken         3.000000             NaN                 1\n",
+       "7   corn syrup         3.000000             NaN                 1\n",
+       "8        lemon         3.000000             NaN                 1\n",
+       "9        onion         3.000000             NaN                 1\n",
        "10       wheat         3.000000             NaN                 1"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -624,8 +631,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "# TODO orderby component"
+    "# TODO add std dev of mean column in CalculateMeanAndStdDevOfColumn\n",
+    "# TODO to proper meal times histogram "
    ]
   },
   {
@@ -633,7 +640,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
