add std dev of mean when calculating mean of column

--- a/notebooks/food_diary_analysis.ipynb
+++ b/notebooks/food_diary_analysis.ipynb
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -420,7 +420,7 @@
        "2 2021-04-21 17:35:00-04:00  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -517,6 +517,7 @@
        "      <th>discomfort_mean</th>\n",
        "      <th>discomfort_std</th>\n",
        "      <th>discomfort_count</th>\n",
+       "      <th>discomfort_std_error</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -526,6 +527,7 @@
        "      <td>4.000000</td>\n",
        "      <td>0.00000</td>\n",
        "      <td>2</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -533,6 +535,7 @@
        "      <td>4.000000</td>\n",
        "      <td>0.00000</td>\n",
        "      <td>2</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -540,6 +543,7 @@
        "      <td>4.000000</td>\n",
        "      <td>0.00000</td>\n",
        "      <td>2</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -547,6 +551,7 @@
        "      <td>3.666667</td>\n",
        "      <td>0.57735</td>\n",
        "      <td>3</td>\n",
+       "      <td>0.333333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -554,6 +559,7 @@
        "      <td>3.666667</td>\n",
        "      <td>0.57735</td>\n",
        "      <td>3</td>\n",
+       "      <td>0.333333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -561,6 +567,7 @@
        "      <td>3.666667</td>\n",
        "      <td>0.57735</td>\n",
        "      <td>3</td>\n",
+       "      <td>0.333333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -568,6 +575,7 @@
        "      <td>3.000000</td>\n",
        "      <td>NaN</td>\n",
        "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -575,6 +583,7 @@
        "      <td>3.000000</td>\n",
        "      <td>NaN</td>\n",
        "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
@@ -582,6 +591,7 @@
        "      <td>3.000000</td>\n",
        "      <td>NaN</td>\n",
        "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
@@ -589,6 +599,7 @@
        "      <td>3.000000</td>\n",
        "      <td>NaN</td>\n",
        "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
@@ -596,27 +607,41 @@
        "      <td>3.000000</td>\n",
        "      <td>NaN</td>\n",
        "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    ingredient  discomfort_mean  discomfort_std  discomfort_count\n",
-       "0       carrot         4.000000         0.00000                 2\n",
-       "1         rice         4.000000         0.00000                 2\n",
-       "2        roast         4.000000         0.00000                 2\n",
-       "3       garlic         3.666667         0.57735                 3\n",
-       "4         peas         3.666667         0.57735                 3\n",
-       "5        sugar         3.666667         0.57735                 3\n",
-       "6      chicken         3.000000             NaN                 1\n",
-       "7   corn syrup         3.000000             NaN                 1\n",
-       "8        lemon         3.000000             NaN                 1\n",
-       "9        onion         3.000000             NaN                 1\n",
-       "10       wheat         3.000000             NaN                 1"
+       "    ingredient  discomfort_mean  discomfort_std  discomfort_count  \\\n",
+       "0       carrot         4.000000         0.00000                 2   \n",
+       "1         rice         4.000000         0.00000                 2   \n",
+       "2        roast         4.000000         0.00000                 2   \n",
+       "3       garlic         3.666667         0.57735                 3   \n",
+       "4         peas         3.666667         0.57735                 3   \n",
+       "5        sugar         3.666667         0.57735                 3   \n",
+       "6      chicken         3.000000             NaN                 1   \n",
+       "7   corn syrup         3.000000             NaN                 1   \n",
+       "8        lemon         3.000000             NaN                 1   \n",
+       "9        onion         3.000000             NaN                 1   \n",
+       "10       wheat         3.000000             NaN                 1   \n",
+       "\n",
+       "    discomfort_std_error  \n",
+       "0               0.000000  \n",
+       "1               0.000000  \n",
+       "2               0.000000  \n",
+       "3               0.333333  \n",
+       "4               0.333333  \n",
+       "5               0.333333  \n",
+       "6                    NaN  \n",
+       "7                    NaN  \n",
+       "8                    NaN  \n",
+       "9                    NaN  \n",
+       "10                   NaN  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -631,7 +656,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO add std dev of mean column in CalculateMeanAndStdDevOfColumn\n",
     "# TODO to proper meal times histogram "
    ]
   },
